edit info page, delete button frontend

--- a/templates/account_page.html
+++ b/templates/account_page.html
@@ -32,7 +32,7 @@
                     <h1>Account page</h1>
                 </div>
                 <div class="col-7">
-                    <button class="btn btn-primary" type="button">Edit info</button>
+                    <button id="edit_info" class="btn btn-primary" type="button">Edit info</button>
                 </div>
             </div>
 
@@ -113,6 +113,12 @@
                             </tr>
                         </tbody>
                     </table>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12">
+                    <button id="delete_account" class="btn btn-danger" type="button">Delete account</button>
                 </div>
             </div>
             
