--- a/templates/edit_info.html
+++ b/templates/edit_info.html
@@ -16,7 +16,7 @@
        
         <!-- <script type="text/javascript" src="{{url_for('static', filename='organiser_signup.js')}}"></script> -->
 
-        <script type="text/javascript" src="../static/organizer_onboard.js"></script>
+        <script type="text/javascript" src="../static/edit_info.js"></script>
         <link rel="stylesheet" href="../static/organizer_onboard.css" />
     </head>
 
@@ -24,10 +24,10 @@
         <div class="container">
             <div class="row mt-5">
                 <div class="col-12">
-                    <h1>Organizer Signup</h1>
+                    <h1>Edit info</h1>
                 </div>
             </div>
-            <form id="submit-form" class="row needs-validation pb-5 mb-5" novalidate>
+            <form id="edit-form" class="row needs-validation pb-5 mb-5" novalidate>
                 <div class="col-md-6">
                     <div class="row form-section">
                         <h2>Primary info:</h2>
@@ -138,8 +138,12 @@
                     </div>
                 </div>
                 
+                    
+                
+
+                
                 <div class="col-12 text-end">
-                    <button class="btn btn-primary" type="submit">Create Account</button>
+                    <button class="btn btn-primary" type="submit">Submit</button>
                 </div>
             </form>
         </div>
