--- a/static/organizer_onboard.css
+++ b/static/organizer_onboard.css
@@ -1,5 +1,9 @@
-form > div{
-    margin: 10px 0px;
+.form-section > div{
+    margin: 5px 0px;
+}
+
+.form-section > label{
+    margin-top: 10px;
 }
 
 h2{
