--- a/templates/organizer_onboard.html
+++ b/templates/organizer_onboard.html
@@ -27,7 +27,7 @@
                     <h1>Organizer Signup</h1>
                 </div>
             </div>
-            <form id="submit-form" class="row needs-validation pb-5 mb-5" novalidate>
+            <form id="signup-form" class="row needs-validation pb-5 mb-5" novalidate>
                 <div class="col-md-6">
                     <div class="row form-section">
                         <h2>Primary info:</h2>
