--- a/templates/edit_info.html
+++ b/templates/edit_info.html
@@ -1,5 +1,10 @@
 <html>
     <head>
+
+        <script>
+            let account_info = {{account_info|tojson}}
+        </script>
+        
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
